fix: add padding to works section for improved spacing

--- a/style.css
+++ b/style.css
@@ -491,6 +491,7 @@ button:active {
 }
 
 #works {
+  padding: 128px 0;
   margin-bottom: 64px;
 }
 
